--- a/config.org
+++ b/config.org
@@ -3,6 +3,19 @@
 #+DESCRIPTION: This configuration is minimal and need-only based.
 #+STARTUP: overview
 
+* Fonts
+
+#+BEGIN_SRC emacs-lisp
+(setq doom-font (font-spec :family "JetBrains Mono" :size 17)
+      doom-variable-pitch-font (font-spec :family "Ubuntu" :size 17)
+      doom-big-font (font-spec :family "JetBrains Mono" :size 21))
+(after! doom-themes
+  (setq doom-themes-enable-bold t
+        doom-themes-enable-italic t))
+(custom-set-faces!
+  '(font-lock-comment-face :slant italic)
+  '(font-lock-keyword-face :slant italic))
+#+END_SRC
 
 * M-x
 
@@ -11,6 +24,17 @@
       :desc "Open like spacemacs" "SPC" #'execute-extended-command)
 #+end_src
 
+* Modeline
+
+#+begin_src emacs-lisp
+(use-package! doom-modeline
+  :config
+  (setq doom-modeline-persp-name t
+        doom-modeline-height 38
+        doom-modeline-time t
+        doom-modeline-time-icon t))
+
+#+end_src
 
 * ORG MODE
 
@@ -124,3 +148,9 @@ I wrapped most of this block in (after! org).  Without this, my settings might b
 
 #+end_src
 
+* THEME
+
+#+begin_src emacs-lisp
+(setq doom-theme 'catppuccin
+      catppuccin-flavor 'macchiato)
+#+end_src
