--- a/config.org
+++ b/config.org
@@ -27,14 +27,13 @@
 * Modeline
 
 #+begin_src emacs-lisp
-(use-package! doom-modeline
-  :config
-  (setq doom-modeline-persp-name t
-        doom-modeline-height 38
-        doom-modeline-time t
-        doom-modeline-time-icon t))
-
+(setq doom-modeline-persp-name t
+      doom-modeline-height 38
+      doom-modeline-time t)
 #+end_src
+
+#+RESULTS:
+: t
 
 * ORG MODE
 
@@ -151,6 +150,17 @@ I wrapped most of this block in (after! org).  Without this, my settings might b
 * THEME
 
 #+begin_src emacs-lisp
-(setq doom-theme 'catppuccin
-      catppuccin-flavor 'macchiato)
+  ;; Global settings (defaults)
+(setq doom-themes-enable-bold t
+      doom-themes-enable-italic t)
+(load-theme 'doom-palenight t)
+
+;; Enable custom neotree theme (all-the-icons must be installed!)
+(doom-themes-neotree-config)
+;; or for treemacs users
+(setq doom-themes-treemacs-theme "doom-atom") ; use "doom-colors" for less minimal icon theme
+(doom-themes-treemacs-config)
+;; Corrects (and improves) org-mode's native fontification.
+(doom-themes-org-config)
 #+end_src
+
